services/jupyterhub/envs/developer/damonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hook-image-puller
  labels:
    component: hook-image-puller
    app: jupyterhub
    release: jupyterhub
spec:
  selector:
    matchLabels:
      component: hook-image-puller
      app: jupyterhub
      release: jupyterhub
  template:
    metadata:
      labels:
        component: hook-image-puller
        app: jupyterhub
        release: jupyterhub
    spec:
