services/jupyterhub/envs/developer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    component: hub
    app: jupyterhub
    release: jupyterhub
spec:
  selector:
    matchLabels:
      component: hub
      app: jupyterhub
      release: jupyterhub
  template:
    metadata:
      labels:
        component: hub
        app: jupyterhub
        release: jupyterhub
    spec:
      containers:
        - name: hub
