services/jupyterhub/envs/developer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-public
  labels:
    component: proxy-public
    release: jupyterhub
spec:
  selector:
    component: proxy
    release: jupyterhub
  type: NodePort
